--- a/View/View.csproj
+++ b/View/View.csproj
@@ -79,8 +79,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="MainWindowViewModel.cs" />
-    <Page Include="MainWindow.xaml">
+    <Compile Include="MainWindow.cs" />
+    <Page Include="FrontEnd.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -88,8 +88,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="FrontEnd.xaml.cs">
+      <DependentUpon>FrontEnd.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="PromptWindow.xaml">
